portainer-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`portainer.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: ${SECRET_CERT}
